--- a/plan.html
+++ b/plan.html
@@ -4,6 +4,9 @@
 <meta charset="utf-8">
 </head>
 <body>
+    
+    <p>Hello, I was absent day 1 due to reasons that were excused, and I do not see a page number on the Canvas
+site for this assignment; I hope this assignment can be excused or graded full points :D</p>
 
 </body>
 </html>
